# usaidwat-next

./: COPYRIGHT  Cargo.toml  README.md
src/: ai.rs  cli.rs  client.rs  clock.rs  conf.rs  count.rs  filter.rs  formatter.rs  http.rs  lib.rs  main.rs  markdown.rs  pager.rs  reddit.rs  service.rs  summary.rs  summary_prompt.txt  test_utils.rs  text.rs  thing.rs  view.rs
src/ai/: auth.rs  client.rs  service.rs
src/ai/client/: openai.rs
src/help/: after.txt  after_summary.txt  summary.txt
src/markdown/: bare.rs  terminal.rs  test_utils.rs
src/reddit/: client.rs  service.rs  thing.rs
tests/: openai_client_https.rs  openai_service_https.rs  reddit_service_https.rs  summarizer_https.rs
tests/data/: about_404.json  about_empty.json  about_mipadi.json  comments_mipadi.json  comments_no_markdown.out  int_about.json
tests/data/claude/: responses_multi_content.json
tests/data/openai/: responses.json  responses_gpt5.json  responses_multi_content.json  responses_multi_content_gpt5.json  responses_multi_output.json  responses_multi_output_gpt5.json  responses_non_output_text.json  responses_non_output_text_gpt5.json
tests/data/reddit/: comments_subreddit_whitespace.json  comments_title_newline.json  comments_whitespace.json  submitted_mipadi.json
tests/markdown/: block_html.bare.txt  block_html.md  block_html.txt  blockquote.bare.txt  blockquote.md  blockquote.txt  blockquote_single.md  blockquote_single.txt  code.bare.txt  code.md  code.txt  code_fenced.md  markdown.bare.txt  nested_mixed_list.md  nested_mixed_list.txt  nested_ordered_list.md  nested_ordered_list.txt  nested_unordered_list.bare.txt  nested_unordered_list.md  nested_unordered_list.txt  ordered_list.md  ordered_list.txt  ordered_list_embedded.bare.txt  ordered_list_embedded.md  ordered_list_embedded.txt  ordered_list_long_items.md  ordered_list_long_items.txt  ordered_list_nonsequential.md  ordered_list_unindented.md  paragraphs.bare.txt  paragraphs.md  paragraphs.txt  unordered_list.bare.txt  unordered_list.md  unordered_list.txt  unordered_list_embedded.md  unordered_list_embedded.txt  unordered_list_long_items.md  unordered_list_long_items.txt  unordered_list_unindented.md  (+2 more)
tests/output/: about_mipadi.out  comments_absolute_dates.out  comments_body.out  comments_body_raw.txt  comments_body_raw_markdown.txt  comments_body_summary.txt  comments_html_entities.out  comments_markdown_body.out  comments_markdown_body_grep.out  comments_raw_body.out  comments_relative_dates.txt  posts.txt  posts_absolute_dates.out  posts_absolute_dates.txt  posts_oneline.out  posts_oneline_long.out  posts_self.txt  summary_raw.txt  summary_raw_self.txt  tally_comments_abc.out  tally_comments_count.out  tally_posts_abc.txt  tally_posts_count.txt  timeline_mipadi.txt
tests/scripts/: openai
