[package]
name = "usaidwat"
version = "3.0.0"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
description = "Answers the age-old question, \"Where does a Redditor comment the most?\""
readme = "README.md"
documentation = "https://docs.rs/usaidwat"
repository = "https://github.com/mdippery/usaidwat-next"
#homepage
license = "Apache-2.0"
keywords = ["ai", "cli", "web", "reddit"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.88"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.38", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
colored = "3.0.0"
counter = "0.7.0"
env_logger = "0.11.8"
htmlentity = "1.3.2"
hypertyper = { version = "0.1.0", git = "https://github.com/mdippery/hypertyper.git" }
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
markdown = "1.0.0"
regex = "1.11.1"
relativetime = "0.1.4"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = { version = "0.16.2", features = ["terminal_size"] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "process"] }
tokio-pager = { version = "1.0.1", git = "https://github.com/mdippery/tokio-pager.git" }

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
seq-macro = "0.3.6"
temp-env = "0.3.6"
uuid = { version = "1.16.0", features = ["v4"] }
