[package]
name = "usaidwat"
version = "4.2.0-beta.0"
authors = ["Michael Dippery <michael@monkey-robot.com>"]
description = "Answers the age-old question, \"Where does a Redditor comment the most?\""
readme = "README.md"
documentation = "https://docs.rs/usaidwat"
repository = "https://github.com/mdippery/usaidwat-next"
#homepage
license = "Apache-2.0"
keywords = ["ai", "cli", "web", "reddit"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.85.1"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
cogito = { version="0.2.2-alpha.1", git = "https://github.com/mdippery/cogito.git" }
cogito-openai = { version="0.3.2-alpha.1", git = "https://github.com/mdippery/cogito.git" }
colored = "3.0.0"
counter = "0.7.0"
discount = { version = "1.0.0-beta.0", git = "git://git.mipadi.net/discount.git" }
env_logger = "0.11.8"
horologe = { version = "2.0.0-alpha.0", features = ["age", "relative-age", "test-utils"], git = "https://github.com/mdippery/horologe.git" }
hypertyper = { version = "0.4.0-alpha.1", git = "https://github.com/mdippery/hypertyper.git" }
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
regex = "1.11.1"
reqwest = { version = "0.13.3", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = "0.16.2"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process"] }
tokio-pager = { version = "1.0.3-alpha.0", git = "https://github.com/mdippery/tokio-pager.git" }

[dev-dependencies]
paste = "1.0.15"
pretty_assertions = "1.4.1"
uuid = { version = "1.16.0", features = ["v4"] }

[lints.clippy]
default_constructed_unit_structs = "allow"
